--- a/src/tn/esprit/gui/Ticket.fxml
+++ b/src/tn/esprit/gui/Ticket.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="484.0" prefWidth="801.0" style="-fx-background-color: #98AFC7;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.gui.TicketController">
+<AnchorPane id="AnchorPane" prefHeight="514.0" prefWidth="855.0" style="-fx-background-color: #98AFC7;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.gui.TicketController">
    <children>
       <Label layoutX="55.0" layoutY="45.0" text="id">
          <font>
@@ -33,15 +33,17 @@
       <Button fx:id="idadd" layoutX="27.0" layoutY="273.0" mnemonicParsing="false" onAction="#ajouter" text="Insert" />
       <Button fx:id="updatebtn" layoutX="101.0" layoutY="273.0" mnemonicParsing="false" onAction="#update" text="Update" />
       <Button fx:id="deletebtn" layoutX="186.0" layoutY="273.0" mnemonicParsing="false" onAction="#delete" text="Delete" />
-      <TableView fx:id="tabticket" layoutX="383.0" layoutY="7.0" onMouseClicked="#handleMouseAction" onSort="#affichetable" prefHeight="420.0" prefWidth="408.0">
+      <TableView fx:id="tabticket" layoutX="386.0" layoutY="71.0" onMouseClicked="#handleMouseAction" onSort="#affichetable" prefHeight="311.0" prefWidth="439.0">
         <columns>
           <TableColumn fx:id="idtab" prefWidth="47.0" text="id" />
           <TableColumn fx:id="prixtab" prefWidth="92.0" text="prix" />
             <TableColumn fx:id="nb_tickettab" prefWidth="90.0" text="nb_tickets" />
-            <TableColumn fx:id="typetab" prefWidth="72.0" text="type" />
-            <TableColumn fx:id="id_evenementtab" prefWidth="106.0" text="id_evenement" />
+            <TableColumn fx:id="typetab" prefWidth="96.0" text="type" />
+            <TableColumn fx:id="id_evenementtab" prefWidth="113.0" text="id_evenement" />
         </columns>
       </TableView>
       <Button fx:id="Reset" layoutX="280.0" layoutY="273.0" mnemonicParsing="false" onAction="#Reset" text="Reset" />
+      <Button fx:id="exportButton" layoutX="186.0" layoutY="377.0" onAction="#exportToCSV" text="Export to CSV" />
+      <TextField fx:id="textfiealdSearch" layoutX="560.0" layoutY="14.0" prefHeight="31.0" prefWidth="265.0" />
    </children>
 </AnchorPane>
