--- a/src/tn/esprit/gui/Commande.fxml
+++ b/src/tn/esprit/gui/Commande.fxml
@@ -5,34 +5,57 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="494.0" prefWidth="833.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.gui.CommandeController">
+<AnchorPane id="AnchorPane" prefHeight="494.0" prefWidth="833.0" style="-fx-background-color: #182052;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.gui.CommandeController">
    <children>
-      <Label layoutX="66.0" layoutY="45.0" text="id" />
-      <Label layoutX="27.0" layoutY="79.0" prefHeight="21.0" prefWidth="115.0" text="nom_evenement" />
-      <Label layoutX="56.0" layoutY="116.0" text="prix" />
-      <Label layoutX="38.0" layoutY="150.0" prefHeight="21.0" prefWidth="69.0" text="id_ticket" />
-      <Label layoutX="36.0" layoutY="190.0" prefHeight="21.0" prefWidth="92.0" text="id_utilisateur" />
+      <Label layoutX="66.0" layoutY="45.0" text="id" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font></Label>
+      <Label layoutX="27.0" layoutY="79.0" prefHeight="21.0" prefWidth="115.0" text="nom_evenement" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font></Label>
+      <Label layoutX="56.0" layoutY="116.0" text="prix" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font></Label>
+      <Label layoutX="38.0" layoutY="150.0" prefHeight="21.0" prefWidth="69.0" text="id_ticket" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font></Label>
+      <Label layoutX="36.0" layoutY="190.0" prefHeight="21.0" prefWidth="92.0" text="id_utilisateur" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font></Label>
       <TextField fx:id="id" disable="true" layoutX="186.0" layoutY="40.0" />
       <TextField fx:id="nom_evenement" layoutX="186.0" layoutY="74.0" />
       <TextField fx:id="prix" layoutX="186.0" layoutY="111.0" />
       <TextField fx:id="id_ticket" layoutX="186.0" layoutY="145.0" />
-      <TextField fx:id="id_utilisateur" layoutX="187.0" layoutY="175.0" />
-      <Button fx:id="idback" layoutX="10.0" layoutY="7.0" mnemonicParsing="false" onAction="#back" text="Back" />
-      <Button fx:id="idadd" layoutX="27.0" layoutY="273.0" mnemonicParsing="false" onAction="#ajouter" text="Insert" />
-      <Button fx:id="updatebtn" layoutX="101.0" layoutY="273.0" mnemonicParsing="false" onAction="#update" text="Update" />
-      <Button fx:id="deletebtn" layoutX="186.0" layoutY="273.0" mnemonicParsing="false" onAction="#delete" text="Delete" />
-      <TableView fx:id="tabcommande" layoutX="387.0" layoutY="1.0" onMouseClicked="#handleMouseAction" onSort="#affichetable" prefHeight="438.0" prefWidth="420.0">
+      <TextField fx:id="id_utilisateur" layoutX="186.0" layoutY="185.0" />
+      <Button fx:id="idback" layoutX="10.0" layoutY="7.0" mnemonicParsing="false" onAction="#back" style="-fx-background-color: #ef6b48;" text="Back" />
+      <Button fx:id="idadd" layoutX="27.0" layoutY="273.0" mnemonicParsing="false" onAction="#ajouter" style="-fx-background-color: #ef6b48;" text="Insert" />
+      <Button fx:id="updatebtn" layoutX="101.0" layoutY="273.0" mnemonicParsing="false" onAction="#update" style="-fx-background-color: #ef6b48;" text="Update" />
+      <Button fx:id="deletebtn" layoutX="186.0" layoutY="273.0" mnemonicParsing="false" onAction="#delete" style="-fx-background-color: #ef6b48;" text="Delete" />
+      <TableView fx:id="tabcommande" layoutX="387.0" layoutY="1.0" onMouseClicked="#handleMouseAction" onSort="#affichetable" prefHeight="274.0" prefWidth="420.0">
         <columns>
-          <TableColumn fx:id="idtab" prefWidth="49.0" text="id" />
-          <TableColumn fx:id="nom_evenementtab" prefWidth="128.0" text="nom_evenement" />
+          <TableColumn fx:id="idtab" minWidth="0.0" prefWidth="0.0" text="id" />
+          <TableColumn fx:id="nom_evenementtab" prefWidth="177.0" text="nom_evenement" />
             <TableColumn fx:id="prixtab" prefWidth="52.0" text="prix" />
             <TableColumn fx:id="id_tickettab" prefWidth="89.0" text="id_ticket" />
             <TableColumn fx:id="id_utilisateurtab" prefWidth="101.0" text="id_utilisateur" />
         </columns>
       </TableView>
-      <Button fx:id="Reset" layoutX="280.0" layoutY="273.0" mnemonicParsing="false" onAction="#Reset" text="Reset" />
-      <Button fx:id="pdfbtn" layoutX="24.0" layoutY="349.0" mnemonicParsing="false" onAction="#pdf" text="pdf" />
+      <Button fx:id="Reset" layoutX="280.0" layoutY="273.0" mnemonicParsing="false" onAction="#Reset" style="-fx-background-color: #ef6b48;" text="Reset" />
+      <Button fx:id="pdfbtn" layoutX="24.0" layoutY="349.0" mnemonicParsing="false" onAction="#pdf" style="-fx-background-color: #ef6b48;" text="pdf" />
+      <ImageView fitHeight="104.0" fitWidth="101.0" layoutX="672.0" layoutY="349.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@logoteamleader.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
